manifests/echo-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: docker.io/jmalloc/echo-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
