manifests/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: echo-server
