manifests/echo-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server
  annotations:
    cert-manager.io/cluster-issuer: dns-01
    haproxy-ingress.github.io/redirect-from: "echo.idletea.net"
spec:
  ingressClassName: haproxy-zero-trust
  tls:
     - secretName: tls-cert
       hosts:
         - echo.idletea.net
  rules:
    - host: "echo.idletea.net"
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: echo-server
              port:
                number: 80
